--- a/Tic-tac.css
+++ b/Tic-tac.css
@@ -1,36 +1,96 @@
 .container{
     text-align: center;
-    padding: 11px;
+    padding: 0;
+    margin: 0;
 }
 
 .box{
-    width: 100px;
-    height: 100px;
-    border: 4px solid black;
+    width: 150px;
+    height: 150px;
+    border: 5px solid rgb(109, 97, 97);
+    background: rgb(255, 255, 255);
     cursor: pointer;
-    font-size: 90px;
-    
-}
-
+    font-size: 120px;
+    color: rgb(42, 80, 108);
+}    
 
 .dashboard{
-
     display: grid;
     grid-template-columns: repeat(3,auto);
     margin: auto;
-    width: 300px;
-    padding: 30px;
-
+    width: 480px;
+    padding: 10px;
 }
-button{
+
+.dashboard :hover{
+    background-color:rgb(187, 180, 180);
+}
+.button{
     border: solid;
     padding-top: 10px;
     padding-bottom: 10px;
     color:  black;
     font-weight: bold;
-    width: 200px;
-    margin-bottom: 5px;
+    width: 400px;
     border-radius: 5px;
-    background: blue;
+    background: rgb(38, 104, 103);
     font-size: 20px;
+    box-shadow: 0 9px #999;
+    cursor: pointer;
+    
+}
+
+.button:hover {background-color: #3e8e41}
+
+.button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+h2{
+    color: rgb(150, 48, 41);
+    font-size: 2em;
+}
+h1{
+    color: rgb(93, 159, 88);
+    font-size: 3em;
+    /* padding: 5px; */
+}
+.resultContainer{
+    position: absolute;
+    width: 40%;
+    height: 300px;
+    background: rgba(175, 181, 161,.7);
+    left: 30%;
+    right: 30%;
+    top: 30%;
+    border-radius: 25px;
+    color: #3e8e41;
+    font-weight: 800;
+}
+#gameover{
+    font-size: 40px;
+    margin-top: 40px;
+    padding-bottom: 10px;
+}
+.buttonbtn{
+    border: solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color:  black;
+    font-weight: bold;
+    width: 150px;
+    border-radius: 5px;
+    background: rgb(38, 104, 103);
+    font-size: 20px;
+    box-shadow: 0 9px #999;
+    cursor: pointer;
+    margin-top: 80px;
+}
+.buttonbtn:hover {background-color: #3e8e41}
+
+.buttonbtn:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
